Fix footer alignment on mobile

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -188,8 +188,9 @@
 
         .channel-thumbnail {
           margin: var(--spacing-xxs);
+          margin-right: var(--spacing-xs);
           margin-left: 0px;
-          margin-top: 0px;
+          margin-top: 2px;
           width: 2.5rem;
           height: 2.5rem;
 
