--- a/ui/scss/component/_footer.scss
+++ b/ui/scss/component/_footer.scss
@@ -13,7 +13,6 @@
     padding: var(--spacing-m);
     padding-left: var(--spacing-s);
     margin-bottom: var(--spacing-xl);
-    align-items: flex-start;
   }
 }
 
